tests/compound_literal_field_shorthand_invalid_name_bad.stderr
tests/compound_literal_field_shorthand_invalid_name_bad.sl:9:17: error: SL2040: unknown compound literal field 'z'
